# task_1

./: CMakeLists.txt  README.md
lab1/: CMakeLists.txt
lab1/src/: CMakeLists.txt  stack.cpp  stack.h
lab1/tests/: CMakeLists.txt  job1.cpp
src/: CMakeLists.txt  SIN.cpp  SIN.h  stack.cpp  stack.h
test/: CMakeLists.txt  gt_stack.cpp
tests/: CMakeLists.txt  gt_sin.cpp  gt_stack.cpp
